aulas de Arrays e Obejetos

--- a/aulasJS/index.html
+++ b/aulasJS/index.html
@@ -7,7 +7,7 @@
     <title> aulas javascript</title>   
 </head>
 <body>
-    <script src="aulas.js" > </script>
+    <script src="arrayObjeto.js" > </script>
 </body>
 
 
